[tool.poetry]
name = "jsonform-check-cclaw"
version = "0.1.0"
description = ""
authors = ["ymh <hanyongming@gmail.com>"]
readme = "README.md"
packages = [{include = "jsonform_check_cclaw", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ujson = "^5.8.0"
hypothesis = {extras = ["codemods"], version = "^6.88.3"}
hypothesis-jsonschema = "^0.23.0"
typer = "^0.9.0"
playwright = "^1.39.0"
pytest-playwright = "^0.4.3"
pytest-xdist = "^3.4.0"
pytest-html = "^4.1.1"
mypy = "^1.7.0"
toolz = "^0.12.0"
yaspin = "^3.0.1"
typer-config = {extras = ["yaml"], version = "^1.3.0"}
pyyaml = "^6.0.1"
structlog = "^23.2.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
